Update filter API and UI (Searching and dropdown)

--- a/ABP_BookStore_Volo/angular/src/app/userinfo/userinfo.component.html
+++ b/ABP_BookStore_Volo/angular/src/app/userinfo/userinfo.component.html
@@ -22,29 +22,18 @@
         <div class="row">
 
           <div class="col-md-6 pt-2">
-            <div class="input-group">
-              <div class="input-group-prepend">
-                <button
-                  type="button"
-                  class="btn bg-blue"
-                  (click)="searchUserInfo()"
-                >
-                  <i class="fas fa-search"></i>
-                </button>
+            <div class="row height d-flex justify-content-center align-items-center">
+              <div class="form">
+                <i class="fa fa-search" (click)="searchUserInfo()"></i>
+                <input type="text" class="form-control form-input" [(ngModel)]="searchString" name="keyword"
+                  placeholder="Search" (keyup.enter)="searchUserInfo()" placeholder="Search anything...">
               </div>
-              <input
-                type="text"
-                class="form-control"
-                [(ngModel)]="searchString"
-                name="keyword"
-                placeholder="Search"
-                (keyup.enter)="searchUserInfo()"
-              />
             </div>
           </div>
 
           <div class="col-md-4 pt-2">
-            <select class="form-select" aria-label="Job Type" [(ngModel)]="selectedJobType" name="selectedJobType" (change)="searchUserInfo()">
+            <select class="form-select" aria-label="Job Type" [(ngModel)]="selectedJobType" name="selectedJobType"
+              (change)="searchUserInfo()">
               <option value="" selected>All</option>
               <option *ngFor="let jobType of jobTypes" [value]="jobType.value">
                 {{ mapJobTypeValueToLabel(jobType.value) }}
@@ -52,8 +41,18 @@
             </select>
           </div>
 
+          <!-- <mat-form-field>
+            <mat-label>Favorite food</mat-label>
+            <mat-select [(ngModel)]="selectedFood">
+              <mat-option *ngFor="let food of foods" [value]="food.value">
+                {{ food.viewValue }}
+              </mat-option>
+            </mat-select>
+          </mat-form-field> -->
+
         </div>
       </div>
+
     </div>
   </div>
 
